small alterations, final push of CSS and HTML

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </section>
     </main>
     <!-- change div distinction to main instead of div -->
-    <section class="benefits">
+    <aside class="benefits">
         <!-- change all div in this main to section to make it easier to read -->
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -76,7 +76,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
-    </section>
+    </aside>
     <!-- changed div to footer -->
     <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
